--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
 
     <div id="app" class="container">
-      <ul class="comments"></ul>
+      <!-- <ul class="comments"></ul>
       <div class="loading-message"></div>
-      <div class="login"></div>
+      <div class="login"></div> -->
     </div>
 
     <div id="form-container"></div>
